# ascl_net_scraper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.rst  cookiecutter_replay.json  flake.nix  pylintrc  pyproject.toml  script.py
.github/workflows/: main.yaml
ascl_net_scraper/: __init__.py  __main__.py  lib.py  main.py
tests/: test_main.py
